all components have been created

--- a/todo-app/src/index.css
+++ b/todo-app/src/index.css
@@ -1,3 +1,4 @@
+/* index.css: Global styles for your React application. Sets up fonts, colors, and basic layout. */
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
