--- a/todo-app/src/components/Auth/Login.css
+++ b/todo-app/src/components/Auth/Login.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f5f5f5;
+  
 }
 
 .login-box {
@@ -46,7 +46,10 @@
 }
 
 .login-button, .google-button {
+    width: 100%;
     padding: 0.75rem;
+    align-items: center;
+    justify-content: left;
     border: none;
     border-radius: 4px;
     font-size: 1rem;
@@ -78,8 +81,8 @@
 }
 
 .google-icon {
-    width: 18px;
-    height: 18px;
+    width: 15px;
+    height: 15px;
 }
 
 .error-message {
@@ -94,4 +97,26 @@
 button:disabled {
     opacity: 0.7;
     cursor: not-allowed;
+}
+
+.signout-button {
+    padding: 8px 16px;
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
+
+.signout-button:hover {
+    background-color: #c82333;
+}
+
+.accountInformation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+
 }
